--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Sally Student Resume</title
+    <link href="https://fonts.googleapis.com/css?family=Courier+Prime&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <h1 id="title">Sally Student</h1>
+      <img   id="sally_photo" src="https://m.media-amazon.com/images/M/MV5BMTY5NzE3NzU3MF5BMl5BanBnXkFtZTgwMjg0NTQ5MDE@._V1_.jpg" alt="Sally Student">
+    </header>
+    <address id="contact">
+<h2>Contact Information</h2>
+<p>Sally S. Student</p>
+<a href = "mailto: abc@example.com" target="_blank">abc@example.com</a>
+<p>Phone - 1(123)456-7890</p>
+</address>
+<main>
+<section id="education">
+<h2>Education</h2>
+<ul>
+  <li>Bloc.io Full Stack Web Development- Jan-Jul 2019</li>
+</ul>
+</section>
+<section id="work">
+  <h2>Work Expirience</h2>
+  <ul>
+    <li>Amazon - Jul-Dec 2019
+      <ul><li>At Amazon, I did stuff</li></ul><br>
+    <li>Google - Dec-Jun 2020
+      <ul><li>At Google, I did stuff</li></ul>
+  </ul>
+</section>
+
+
+</main>
+  </body
+</html>
 
